# 2D-DFT-Visualisation

./: .gitignore  README.md  app.py  pyproject.toml
