[project]
name = "2d-dft-visualisation"
version = "0.1.0"
description = "A visualization of the discrete Fourier transform on images."
authors     = [
    { name = "Inspiaaa" },
    { name = "Uwe Hahne", email = "uwe.hahne@hfu.eu" }
]
readme = "README.md"

requires-python = ">=3.9.0"
dependencies    = [
"matplotlib>=3.8.1",
"numpy>=1.26.1",
"opencv-python>=4.8.1.78",
"PyQt5==5.15.10",
"PyQt5-Qt5==5.15.11",
"PyQt5-sip==12.13.0",
"yapf>=0.32.0"
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

